Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus totam voluptatibus blanditiis sequi ab possimus distinctio, corrupti suscipit facilis, quam dignissimos odio, ipsam cumque soluta dolor ad dolorum optio aut?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, voluptatibus. Commodi praesentium corrupti beatae quod, libero sequi porro consectetur deserunt expedita, adipisci, autem iure error cupiditate ut? Mollitia, id ratione.</p>
     
 </body>
 </html>
